<resources>
    <string name="app_name">Wordminded xml version</string>
    <string name="menu_play">Играть</string>
    <string name="menu_rules">Правила</string>
    <string name="menu_settings">Настройки</string>
    <string name="rules_title">ПРАВИЛА</string>
    <string name="rules_text_one">Соображарий – словесная игра для веселых компаний и семейных вечеров.</string>
    <string name="rules_text_two">В игре «Соображарий» есть две колоды карт разного цвета: красный и синий. Карты синего цвета – категории ограничивающие поиск нужного слова. Колода красного цвета – на них изображены буквы, которые помогут найти нужное слово, так как с этих букв они и начинаются.</string>
    <string name="rules_text_three">Игру начинает любой игрок. Он нажимает на экран телефона. Появляются 2 карты. Игроки стараются как можно быстрее назвать слово, которое подходит под открытую категорию и начинается с открытой буквы.</string>
    <string name="settings_title">НАСТРОЙКИ</string>

    <string name="letter_01">А</string>
    <string name="letter_02">Б</string>
    <string name="letter_03">В</string>
    <string name="letter_04">Г</string>
    <string name="letter_05">Д</string>
    <string name="letter_06">Е,Ё</string>
    <string name="letter_07">Ж</string>
    <string name="letter_08">З</string>
    <string name="letter_09">И,Й</string>
    <string name="letter_10">К</string>
    <string name="letter_11">Л</string>
    <string name="letter_12">М</string>
    <string name="letter_13">Н</string>
    <string name="letter_14">О</string>
    <string name="letter_15">П</string>
    <string name="letter_16">P</string>
    <string name="letter_17">С</string>
    <string name="letter_18">Т</string>
    <string name="letter_19">У</string>
    <string name="letter_20">Ф</string>
    <string name="letter_21">Ч</string>
    <string name="letter_22">Ц</string>
    <string name="letter_23">Ч</string>
    <string name="letter_24">Ш,Щ</string>
    <string name="letter_25">Э,Ю</string>
    <string name="letter_26">Я</string>

    <string name="task_01">Аббревиатура</string>
    <string name="task_02">Абстрактное понятие</string>
    <string name="task_03">Бренд</string>
    <string name="task_04">Вещество, материал</string>
    <string name="task_05">Мужское имя</string>
    <string name="task_06">Женское имя</string>
    <string name="task_07">Город</string>
    <string name="task_08">Еда</string>
    <string name="task_09">Животное</string>
    <string name="task_10">Профессия</string>
    <string name="task_11">Растение</string>
    <string name="task_12">Ругательное слово</string>
    <string name="task_13">Страна</string>
    <string name="task_14">Техническое устройство</string>
    <string name="task_15">Напиток</string>
    <string name="task_16">Наречние</string>
    <string name="task_17">Одежда</string>
    <string name="task_18">Связано с войной (Можно называть имена собственные)</string>
    <string name="task_19">Связано с игрушками и играми (Можно называть имена собственные)</string>
    <string name="task_20">Связано с музыкой (Можно называть имена собственные)</string>
    <string name="task_21">Связано со спортом (Можно называть имена собственные)</string>
    <string name="task_22">Вещь дешевле 100 рублей</string>
    <string name="task_23">Вещь дороже миллиона рублей</string>
    <string name="task_24">Вещь, которая есть у вашей семьи</string>
    <string name="task_25">Вещь, которой нет у вашей семьи</string>
    <string name="task_26">Вещь, которая может служить для преступления</string>
    <string name="task_27">Вещь, которая не могла существовать 100 лет назад</string>
    <string name="task_28">Вещь, которую запрещено проносить в самолет</string>
    <string name="task_29">Вещь, которую могли изготовить 1000 лет назад</string>
    <string name="task_30">Вещь, которую можно сделать из древесины</string>
    <string name="task_31">Вещь, которую можно сделать из металла</string>
    <string name="task_32">Весит больше тонны</string>
    <string name="task_33">Можно увидеть в больнице</string>
    <string name="task_34">Можно увидеть в деревне</string>
    <string name="task_35">Можно увидеть в школе или институте</string>
    <string name="task_36">Слово из шести букв</string>
    <string name="task_37">Слово заканчивается на эту букву</string>
    <string name="task_38">Слово, в котором есть "ь"</string>
    <string name="task_39">Слово, в котором эта буква встречается дважды</string>
    <string name="task_40">Может быть красного цвета</string>
    <string name="task_41">Можно коллекционировать</string>
    <string name="task_42">Можно положить в карман</string>
    <string name="task_43">Можно сломать или испортить руками</string>
    <string name="task_44">Вымышленный персонаж</string>
    <string name="task_45">Гора, река, озеро или море</string>
    <string name="task_46">Знаменитая личность (Фамилия, псевдоним или прозвище)</string>
    <string name="task_47">На что вы можете посмотреть прямо сейчас</string>
    <string name="task_48">Не стоит давать детям</string>
    <string name="task_49">Продается в супермаркете</string>
    <string name="task_50">Произведение (Фильм, книга, песня)</string>
    <string name="task_51">Тоньше сантиметра</string>
    <string name="task_52">Часть тела человека или животного</string>
</resources>