<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu.MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/spacing_large"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <Button
            android:id="@+id/menu_play_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="@drawable/shape_red"
            android:text="@string/menu_play"
            android:textColor="?colorOnSecondary"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/menu_rules_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="@drawable/shape_blue"
            android:text="@string/menu_rules"
            android:textColor="?colorOnSecondary"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/menu_settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:layout_weight="1"
            android:background="@drawable/shape_red"
            android:text="@string/menu_settings"
            android:textColor="?colorOnSecondary"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>